--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ layout: page
 
         <div class="container-fluid">
             <p>In 2012 Chris Roberts convinced 34,397 backers on kickstarter to give his company $2,134,374 for a space simulation game "Star Citizen" with a Wing Commander style single player mode entitled "Squadron 42".</p>
-            <p>Chris made and continues to make <b>a lot of promises</b>. StarCitizen Tracker attempts to fact-check Chris and Cloud Imperium Games Corporation to see if they adhere to the expectations set concerning the project.  This crowdsourced endeavour started on April 17th, 2017 and may contain inaccuracies.</p>
+            <p>Chris made and continues to make <b>a lot of promises</b>. StarCitizen Status attempts to fact-check Chris and Cloud Imperium Games Corporation to see if they adhere to the expectations set concerning the project.  This crowdsourced endeavour started on April 17th, 2017 and may contain inaccuracies.</p>
             <p>
                 <span><b>Accuracy Confidence:</b></span>
                 <button type="submit" class="btn btn-default" id="confidence-btn" data-toggle="tooltip" data-placement="right" title="" data-original-title="submit sources to improve this number">{{ confidence }}%</button>
@@ -69,19 +69,8 @@ layout: page
                         </a> -->
                     </li>
                     <li>
-                        <a href="https://twitter.com/home?status=Track%C2%A0%40RobertsSpaceInd's%C2%A0Promises%C2%A0with%C2%A0%23StarCitizenTracker%20https%3A//starcitizentracker.github.io/"
-                           target="_blank" style="color:#1da1f2;">
-                            <i class="fa fa-2x fa-twitter"></i>
-                        </a>
-                    </li>
-                    <li>
                         <a href="https://reddit.com/r/starcitizen" target="_blank" style="color:#ff5700;">
                             <i class="fa fa-2x fa-reddit"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://discord.gg/vsPHsKn" target="_blank" style="color:#7289da;">
-                            <i class="fa fa-2x fa-comments"></i>
                         </a>
                     </li>
                     <li>
@@ -92,7 +81,7 @@ layout: page
                 </ul>
             </div>
             <p><b>Estimated Total Progress on Major Features:</b></p>
-            <a href="https://starcitizentracker.github.io/majorsystems/" style="color:white"><div class="progress">
+            <a href="https://defterai.github.io/StarCitizenStatus/majorsystems/" style="color:white"><div class="progress">
                 <div class="progress-bar progress-bar-default progress-bar-striped" role="progressbar" style="width:{{ estimatedprogress }}%">{{ estimatedprogress }}%</div>
             </div></a>
          </div>
@@ -241,7 +230,6 @@ layout: page
 
                             {% capture tweettext %}{{ message }}{% endcapture %}
 
-                            <a href="https://twitter.com/share?url=https://starcitizentracker.github.io/&text={{ tweettext | truncate: 102 | url_encode }}&hashtags=StarCitizen" target="_blank"><i class="fa fa-fw fa-twitter text-muted" aria-hidden="true"></i></a> -->
                             <!-- hoverover quote -->
                             {% if promise.quote contains '|' %}
                                 {% assign quotesplit = promise.quote | split: '|' %}
