--- a/faq.html
+++ b/faq.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: FAQ
-permalink: /faq/
+permalink: /StarCitizenStatus/faq/
 comments: false
 ---
 <div class="container-fluid">
