--- a/majorsystems.html
+++ b/majorsystems.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Major Systems
-permalink: /StarCitizenStatus/majorsystems/
+permalink: /majorsystems/
 comments: false
 ---
 
